# md2html

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml
Application/: Main.cpp  Utf8Str.cpp  Utf8Str.h  Utils.cpp  Utils.h
___res/: Addon.js  Article.js  Index.js  Styles.css  UnprotectMath.js  Utils.js
___res/KaTeX/: ___md2htmlNotes.md
Пример/Математика/Формула/: Крутая формула.md
Пример/Физика/: Физический закон.md
